--- a/products.html
+++ b/products.html
@@ -38,10 +38,11 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <h1 class="text-center py-1">Productos</h1>
+      <p class="text-center py-2">Verás aquí todos los productos de la categoria seleccionada</p>
     </div>
+    <div id="filterContainer"></div>
+    <div id="myContainerProducts"></div> 
   </main>
   <footer class="text-muted">
     <div class="container">
@@ -67,3 +68,5 @@
 </body>
 
 </html>
+
+
