--- a/cart.html
+++ b/cart.html
@@ -36,10 +36,10 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
+    <div id="main-container" class="container mx-auto w-75">
+      <!-- <div class="alert alert-danger text-center" role="alert">
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      </div> -->
     </div>
   </main>
   <footer class="text-muted">
